--- a/book-now.html
+++ b/book-now.html
@@ -210,7 +210,7 @@
             <div class="container" style="width: fit-content;">
                 <form method="post" name="book-free-coding-class">
                     <h3 style="color: white; text-align: center;">Reserve </h3>
-                    <h5> You can also directly book by calling/Whatsapp text us on 6265582003</h5>
+                    <h5> You can also directly book by calling/Whatsapp text us on +91 7974280944, 6265582003</h5>
 
                         <!-- <div class="tab-pane fade show active text-align form-new" id="home" role="tabpanel" aria-labelledby="home-tab">
                             <h3 class="register-heading">Book a FREE session</h3>
