--- a/contact.html
+++ b/contact.html
@@ -28,51 +28,8 @@
   <!-- style CSS -->
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">   
-  <!-- Facebook Pixel Code -->
-<script>
-  !function(f,b,e,v,n,t,s)
-  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-  n.queue=[];t=b.createElement(e);t.async=!0;
-  t.src=v;s=b.getElementsByTagName(e)[0];
-  s.parentNode.insertBefore(t,s)}(window, document,'script',
-  'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '791594404885065');
-  fbq('track', 'PageView');
-  </script>
-  <noscript><img height="1" width="1" style="display:none"
-  src="https://www.facebook.com/tr?id=791594404885065&ev=PageView&noscript=1"
-  /></noscript>
-  <!-- End Facebook Pixel Code -->
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-201384400-1"></script>
-  <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'UA-201384400-1');
-</script>
-<script async src="https://js.convertflow.co/production/websites/32597.js"></script>
-   <!-- Facebook Pixel Code JN -->
-   <script>
-    !function(f,b,e,v,n,t,s)
-    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-    n.queue=[];t=b.createElement(e);t.async=!0;
-    t.src=v;s=b.getElementsByTagName(e)[0];
-    s.parentNode.insertBefore(t,s)}(window, document,'script',
-    'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '420307462993298');
-    fbq('track', 'PageView');
-  </script>
-  <noscript><img height="1" width="1" style="display:none"
-    src="https://www.facebook.com/tr?id=420307462993298&ev=PageView&noscript=1"
-  /></noscript>
-  <!-- End Facebook Pixel Code -->
 </head>
 
 <body>
@@ -139,19 +96,19 @@
            
           </div>
           <div class="col-lg-8">
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSerRKymw_fyA0Y9Vv_c89_jgwGVlKYaZS5xPoVriuWDQccKIg/viewform?embedded=true" width="640" height="900" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdYm3BrhjtUfRRdf2nMWSS_PLeKpOsPQz8nDxmj9WwHpSlSWg/viewform?embedded=true" width="640" height="1154" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
           </div>
           <div class="col-lg-4">
             <div class="media contact-info">
               <span class="contact-info__icon"><i class="ti-home"></i></span>
               <div class="media-body">
-                <h3>Skycity, Skyline Adobe, 216, Bada Bangarda-Palakhedi Rd, Bada Bangarda, Indore, Madhya Pradesh 452005</h3>
+                <h3>Skyline Adobe, 216, SkyCity, Bada Bangarda, Super Corridor, Indore, Madhya Pradesh 452005</h3>
               </div>
             </div>
             <div class="media contact-info">
               <span class="contact-info__icon"><i class="ti-tablet"></i></span>
               <div class="media-body">
-                <h3>+91 6265582003(Whatsapp), 8839928085</h3>
+                <h3>+91 6265582003(Whatsapp), 7974280944</h3>
               </div>
             </div>
             <div class="media contact-info">
